@@ -3,7 +3,7 @@ package com.example.medicalclinic.service;
 import com.example.medicalclinic.exception.DoctorException;
 import com.example.medicalclinic.exception.VisitException;
 import com.example.medicalclinic.mapper.VisitMapper;
-import com.example.medicalclinic.model.dto.PageableContentDTO;
+import com.example.medicalclinic.model.VisitHelper;
 import com.example.medicalclinic.model.dto.VisitDTO;
 import com.example.medicalclinic.model.entity.Doctor;
 import com.example.medicalclinic.model.entity.Patient;
@@ -17,20 +17,15 @@ import org.junit.jupiter.api.extension.ExtendWith;
 import org.mapstruct.factory.Mappers;
 import org.mockito.Mockito;
 import org.mockito.junit.jupiter.MockitoExtension;
-import org.springframework.data.domain.Page;
-import org.springframework.data.domain.PageImpl;
-import org.springframework.data.domain.PageRequest;
-import org.springframework.data.domain.Pageable;
 
 import java.time.LocalDateTime;
-import java.util.HashSet;
+import java.util.Collections;
 import java.util.List;
 import java.util.Optional;
 
-import static org.junit.jupiter.api.Assertions.assertEquals;
-import static org.junit.jupiter.api.Assertions.assertThrows;
+import static org.junit.jupiter.api.Assertions.*;
 import static org.mockito.ArgumentMatchers.any;
-import static org.mockito.Mockito.when;
+import static org.mockito.Mockito.*;
 
 @ExtendWith(MockitoExtension.class)
 public class VisitServiceTest {
@@ -39,6 +34,7 @@ public class VisitServiceTest {
     private DoctorRepository doctorRepository;
     private PatientRepository patientRepository;
     private VisitService visitService;
+    private VisitHelper visitHelper;
 
     @BeforeEach
     void setUp() {
@@ -46,213 +42,210 @@ public class VisitServiceTest {
         this.doctorRepository = Mockito.mock(DoctorRepository.class);
         this.patientRepository = Mockito.mock(PatientRepository.class);
         this.visitMapper = Mappers.getMapper(VisitMapper.class);
-        this.visitService = new VisitService(visitRepository, visitMapper, doctorRepository, patientRepository);
+        this.visitHelper = Mockito.mock(VisitHelper.class);
+        this.visitService = new VisitService(visitRepository, visitMapper, doctorRepository, patientRepository, visitHelper);
     }
 
     @Test
-    void createVisit_visitExist_VisitCreated() {
+    void createVisit_shouldCreateVisitWhenDataIsValid() {
         // Given
         Long doctorId = 1L;
-        LocalDateTime startTime = LocalDateTime.now().plusMinutes(30).withMinute(0);
-        LocalDateTime endTime = LocalDateTime.now().plusMinutes(60).withMinute(0);
+        LocalDateTime now = LocalDateTime.now();
+        LocalDateTime startTime = now.withMinute(0).withSecond(0).withNano(0).plusHours(1);
+        LocalDateTime endTime = startTime.plusHours(1);
+        Doctor doctor = new Doctor();
+        doctor.setId(doctorId);
 
-        Doctor doctor = createDoctor(doctorId);
         when(doctorRepository.findById(doctorId)).thenReturn(Optional.of(doctor));
-        when(visitRepository.findByDoctorId(doctorId)).thenReturn(List.of());
-
-        Visit visit = createVisit(doctor, startTime, endTime);
-        when(visitRepository.save(any())).thenReturn(visit);
+        when(visitHelper.getConflictingVisits(doctorId, startTime, endTime)).thenReturn(Collections.emptyList());
+        when(visitRepository.save(any(Visit.class))).thenAnswer(invocation -> {
+            Visit savedVisit = invocation.getArgument(0);
+            savedVisit.setId(1L);
+            return savedVisit;
+        });
 
         // When
         VisitDTO result = visitService.createVisit(doctorId, startTime, endTime);
 
         // Then
-        assertEquals(doctorId, result.getDoctor().getId());
-        assertEquals(startTime, result.getStartTime());
-        assertEquals(endTime, result.getEndTime());
+        assertNotNull(result);
+        assertEquals(doctorId, result.getId());
+        verify(visitHelper).validateTimes(startTime, endTime);
+        verify(visitRepository).save(any(Visit.class));
     }
 
     @Test
-    void createVisit_doctorNotFound_throwsException() {
+    void createVisit_shouldThrowWhenDoctorNotFound() {
         // Given
         Long doctorId = 1L;
-        LocalDateTime startTime = LocalDateTime.of(2025, 5, 12, 13, 0);
-        LocalDateTime endTime = LocalDateTime.of(2025, 5, 12, 14, 0);
         when(doctorRepository.findById(doctorId)).thenReturn(Optional.empty());
 
-        // When
-        DoctorException exception = assertThrows(DoctorException.class, () -> visitService.createVisit(doctorId, startTime, endTime));
-
-        // Then
-        assertEquals("Doctor doesnt exist", exception.getMessage());
+        // When & Then
+        assertThrows(DoctorException.class, () ->
+                visitService.createVisit(doctorId, LocalDateTime.now(), LocalDateTime.now().plusHours(1)));
     }
 
     @Test
-    void createVisit_conflictingVisit_throwsException() {
+    void createVisit_shouldThrowWhenTimeConflictExists() {
         // Given
         Long doctorId = 1L;
-        LocalDateTime startTime = LocalDateTime.of(2025, 5, 12, 13, 0);
-        LocalDateTime endTime = LocalDateTime.of(2025, 5, 12, 14, 0);
-        Doctor doctor = createDoctor(doctorId);
-        when(doctorRepository.findById(doctorId)).thenReturn(Optional.of(doctor));
-
-        Visit conflictingVisit = createVisit(doctor, startTime.minusMinutes(30), endTime.plusMinutes(30));
-        when(visitRepository.findByDoctorId(doctorId)).thenReturn(List.of(conflictingVisit));
-
-        // When
-        VisitException exception = assertThrows(VisitException.class, () -> visitService.createVisit(doctorId, startTime, endTime));
-
-        // Then
-        assertEquals("Doctor has a visit at this time", exception.getMessage());
-    }
-
-    @Test
-    void createVisit_startTimeInPast_throwsException() {
-        // Given
-        Long doctorId = 1L;
-        LocalDateTime startTime = LocalDateTime.now().minusMinutes(1);
+        LocalDateTime startTime = LocalDateTime.now().plusHours(1);
         LocalDateTime endTime = startTime.plusHours(1);
+        Doctor doctor = new Doctor();
+        doctor.setId(doctorId);
 
-        // When
-        VisitException exception = assertThrows(VisitException.class, () ->
+        when(doctorRepository.findById(doctorId)).thenReturn(Optional.of(doctor));
+        when(visitHelper.getConflictingVisits(doctorId, startTime, endTime))
+                .thenReturn(List.of(new Visit()));
+
+        // When & Then
+        assertThrows(VisitException.class, () ->
                 visitService.createVisit(doctorId, startTime, endTime));
-
-        // Then
-        assertEquals("Can't create visits in the past", exception.getMessage());
     }
 
     @Test
-    void createVisit_endTimeBeforeStartTime_throwsException() {
-        //Given
-        Long doctorId = 1L;
-        LocalDateTime startTime = LocalDateTime.now().plusMinutes(30);
-        LocalDateTime endTime = startTime.minusMinutes(15);
-
-        // When
-        VisitException exception = assertThrows(VisitException.class, () ->
-                visitService.createVisit(doctorId, startTime, endTime));
-
-        // Then
-        assertEquals("End time must be after start time", exception.getMessage());
-    }
-
-    @Test
-    void createVisit_notQuarterTime_throwsException() {
-        // Given
-        Long doctorId = 1L;
-        LocalDateTime startTime = LocalDateTime.now().plusMinutes(30).withMinute(17);
-        LocalDateTime endTime = LocalDateTime.now().plusMinutes(60).withMinute(32);
-
-        // When
-        VisitException exception = assertThrows(VisitException.class, () ->
-                visitService.createVisit(doctorId, startTime, endTime));
-
-        // Then
-        assertEquals("Visits must be in quarter (00, 15, 30, 45)", exception.getMessage());
-    }
-
-    @Test
-    void bookVisit_visitExist_VisitBooked() {
+    void bookVisit_shouldBookVisitWhenDataIsValid() {
         // Given
         Long visitId = 1L;
         Long patientId = 1L;
-        Visit visit = createVisit(visitId);
-        Patient patient = createPatient(patientId);
+        Visit visit = new Visit();
+        visit.setId(visitId);
+        Patient patient = new Patient();
+        patient.setId(patientId);
+
         when(visitRepository.findById(visitId)).thenReturn(Optional.of(visit));
         when(patientRepository.findById(patientId)).thenReturn(Optional.of(patient));
-
-        Visit savedVisit = createVisit(visitId);
-        savedVisit.setPatient(patient);
-        when(visitRepository.save(any())).thenReturn(savedVisit);
+        when(visitRepository.save(any(Visit.class))).thenAnswer(invocation -> invocation.getArgument(0));
 
         // When
         VisitDTO result = visitService.bookVisit(visitId, patientId);
 
         // Then
-        assertEquals(visitId, result.getId());
-        assertEquals(visit.getStartTime(), result.getStartTime());
-        assertEquals(visit.getEndTime(), result.getEndTime());
+        assertNotNull(result);
+        assertEquals(patientId, result.getId());
+        verify(visitRepository).save(visit);
     }
 
     @Test
-    void bookVisit_visitNotFound_throwsException() {
+    void bookVisit_shouldThrowWhenVisitNotFound() {
         // Given
         Long visitId = 1L;
-        Long patientId = 2L;
         when(visitRepository.findById(visitId)).thenReturn(Optional.empty());
 
-        // When
-        VisitException exception = assertThrows(VisitException.class, () -> visitService.bookVisit(visitId, patientId));
-
-        // Then
-        assertEquals("Visit doesnt exist", exception.getMessage());
+        // When & Then
+        assertThrows(VisitException.class, () ->
+                visitService.bookVisit(visitId, 1L));
     }
 
     @Test
-    void bookVisit_patientNotFound_throwsException() {
+    void bookVisit_shouldThrowWhenVisitAlreadyBooked() {
         // Given
         Long visitId = 1L;
-        Long patientId = 1L;
-        Visit visit = createVisit(visitId);
+        Visit visit = new Visit();
+        visit.setId(visitId);
+        visit.setPatient(new Patient()); // already booked
 
         when(visitRepository.findById(visitId)).thenReturn(Optional.of(visit));
-        when(patientRepository.findById(patientId)).thenReturn(Optional.empty());
 
-        // When
-        VisitException exception = assertThrows(VisitException.class, () -> visitService.bookVisit(visitId, patientId));
-
-        // Then
-        assertEquals("Patient doesnt exist", exception.getMessage());
+        // When & Then
+        assertThrows(VisitException.class, () ->
+                visitService.bookVisit(visitId, 1L));
     }
 
     @Test
-    void getVisits_visitsExists_VisitsFound() {
+    void cancelVisit_shouldCancelVisitWhenConditionsMet() {
         // Given
-        Pageable pageable = PageRequest.of(0, 10);
-        List<Visit> visitList = List.of(
-                createVisit(1L),
-                createVisit(2L)
-        );
-        Page<Visit> page = new PageImpl(visitList, pageable, 2L);
-        when(visitRepository.findAll(pageable)).thenReturn(page);
+        Long visitId = 1L;
+        String doctorEmail = "doctor@example.com";
+        Visit visit = new Visit();
+        Doctor doctor = new Doctor();
+        doctor.setEmail(doctorEmail);
+        visit.setDoctor(doctor);
+        visit.setStartTime(LocalDateTime.now().plusHours(1));
+
+        when(visitRepository.findById(visitId)).thenReturn(Optional.of(visit));
 
         // When
-        PageableContentDTO<VisitDTO> result = visitService.getVisits(pageable);
+        visitService.cancelVisit(visitId, doctorEmail);
 
-        //Then
-        assertEquals(page.getTotalPages(), result.totalPages());
-        assertEquals(page.getTotalElements(), result.totalElements());
-        assertEquals(page.getContent().size(), result.content().size());
-        assertEquals(1L, result.content().get(0).getId());
-        assertEquals(2L, result.content().get(1).getId());
+        // Then
+        verify(visitRepository).delete(visit);
     }
 
-    private Visit createVisit(Long visitId) {
-        return Visit.builder()
-                .id(visitId)
-                .build();
+    @Test
+    void cancelVisit_shouldThrowWhenVisitNotFound() {
+        // Given
+        Long visitId = 1L;
+        when(visitRepository.findById(visitId)).thenReturn(Optional.empty());
+
+        // When & Then
+        assertThrows(VisitException.class, () ->
+                visitService.cancelVisit(visitId, "doctor@example.com"));
     }
 
-    private Visit createVisit(Doctor doctor, LocalDateTime startTime, LocalDateTime endTime) {
-        return Visit.builder()
-                .doctor(doctor)
-                .startTime(startTime)
-                .endTime(endTime)
-                .build();
+    @Test
+    void cancelVisit_shouldThrowWhenNotDoctorVisit() {
+        // Given
+        Long visitId = 1L;
+        Visit visit = new Visit();
+        Doctor doctor = new Doctor();
+        doctor.setEmail("other@example.com");
+        visit.setDoctor(doctor);
+
+        when(visitRepository.findById(visitId)).thenReturn(Optional.of(visit));
+
+        // When & Then
+        assertThrows(VisitException.class, () ->
+                visitService.cancelVisit(visitId, "doctor@example.com"));
     }
 
-    private Doctor createDoctor(Long doctorId) {
-        return Doctor.builder()
-                .id(doctorId)
-                .email("test@email.com")
-                .password("password")
-                .facilities(new HashSet<>())
-                .build();
+    @Test
+    void cancelVisit_shouldThrowWhenVisitInPast() {
+        // Given
+        Long visitId = 1L;
+        String doctorEmail = "doctor@example.com";
+        Visit visit = new Visit();
+        Doctor doctor = new Doctor();
+        doctor.setEmail(doctorEmail);
+        visit.setDoctor(doctor);
+        visit.setStartTime(LocalDateTime.now().minusHours(1));
+
+        when(visitRepository.findById(visitId)).thenReturn(Optional.of(visit));
+
+        // When & Then
+        assertThrows(VisitException.class, () ->
+                visitService.cancelVisit(visitId, doctorEmail));
     }
 
-    private Patient createPatient(Long patientId) {
-        return Patient.builder()
-                .id(patientId)
-                .build();
-    }
+//    @Test
+//    void reserveVisit_shouldReserveVisitWhenDataValid() {
+//        // Given
+//        Long visitId = 1L;
+//        String doctorEmail = "doctor@example.com";
+//        String patientEmail = "patient@example.com";
+//        Patient patient = Patient.builder()
+//                .email(patientEmail)
+//                .build();
+//        Visit visit = new Visit();
+//        Doctor doctor = Doctor.builder()
+//                .email(doctorEmail)
+//                .build();
+//        DoctorDTO doctorDTO = DoctorDTO.builder()
+//                .email(doctorEmail)
+//                .build();
+//        patientRepository.save(patient);
+//
+//        when(visitRepository.findById(visitId)).thenReturn(Optional.of(visit));
+//        when(doctorRepository.findByEmail(doctorEmail)).thenReturn(Optional.of(doctor));
+//        when(visitRepository.save(any(Visit.class))).thenAnswer(invocation -> invocation.getArgument(0));
+//        when(patientRepository.findByEmail(patientEmail)).thenReturn(Optional.of(patient));
+//
+//        // When
+//        VisitDTO result = visitService.reserveVisit(visitId, patientEmail);
+//
+//        // Then
+//        assertNotNull(result);
+//        assertEquals(doctorDTO, result.getDoctor());
+//        verify(visitRepository).save(visit);
+//    }
 }
